objects/LAT_ContractPositivation__c.object
<CustomObject>
    <fields>
        <fullName>LAT_Capacity__c</fullName>
        <label>Capacidade da Casa (número pessoas)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_Contract__c</fullName>
        <label>Contrato</label>
        <referenceTo>LAT_Contract2__c</referenceTo>
        <relationshipLabel>Positivaçoes</relationshipLabel>
        <relationshipName>Positiva_oes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LAT_FacebookFollowers__c</fullName>
        <label>Número Total de Seguidores Facebook</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_InstagramFollowers__c</fullName>
        <label>Número Total de Seguidores Instagram</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LAT_LearnedLessons__c</fullName>
        <label>Lições Aprendidas</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LAT_RecommendContract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recomenda Contrato?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LAT_TaskName__c</fullName>
        <label>Nome Atividade</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Task__c</fullName>
        <label>Task Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_taskLink__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+LAT_Task__c, IF(LAT_TaskName__c != &apos;&apos;, LAT_TaskName__c, LAT_Task__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Atividade</label>
        <type>Text</type>
    </fields>
    <label>Positivação</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Positivaç Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Positivaçoes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>